# Hatchet

./: .gitignore  .gitmodules  README.md  bootstrap.cmd  bootstrap.sh  default.nix  meson.build  meson_options.txt  resources.qrc
dependencies/: meson.build
dependencies/attica/: meson.build
dependencies/boost/: meson.build
dependencies/echonest/: meson.build
dependencies/gnutls/: meson.build
dependencies/kdsingleapplicationguard/: meson.build
dependencies/libcrashreporter-qt/: meson.build
dependencies/liblastfm/: meson.build
dependencies/libportfwd/: meson.build
dependencies/libvlc/: meson.build
dependencies/lucene++/: meson.build
dependencies/qca2/: meson.build
dependencies/qt-certificate-addon/: meson.build
dependencies/qt5/: meson.build
dependencies/qtkeychain/: meson.build
dependencies/quazip/: meson.build
dependencies/qxt/: meson.build
dependencies/sparsehash/: meson.build
dependencies/taglib/: meson.build
dependencies/telepathy-qt/: meson.build
dependencies/zlib/: meson.build
extra/: Config.h.in  HatchetVersion.h.in  meson.build
extra/admin/mac/: Info.plist  build-release-osx.sh  create-dmg.sh  macdeploy.py  sign_bundle.rb  sparkle-beta.rss  sparkle.rss
extra/admin/unix/: hatchet.desktop
extra/admin/win/: sparklewin-beta.rss  sparklewin.rss  update-vlc.sh
extra/lang/: hatchet_af_ZA.ts  hatchet_ar.ts  hatchet_bg.ts  hatchet_bn_IN.ts  hatchet_ca.ts  hatchet_ca@valencia.ts  hatchet_cs.ts  hatchet_da.ts  hatchet_de.ts  hatchet_el.ts  hatchet_en.ts  hatchet_en_AU.ts  hatchet_en_GB.ts  hatchet_es.ts  hatchet_es_419.ts  hatchet_es_AR.ts  hatchet_es_CL.ts  hatchet_es_PE.ts  hatchet_et.ts  hatchet_eu.ts  hatchet_fi.ts  hatchet_fr.ts  hatchet_gl.ts  hatchet_he.ts  hatchet_hi_IN.ts  hatchet_hu.ts  hatchet_id.ts  hatchet_is.ts  hatchet_it.ts  hatchet_ja.ts  hatchet_ka.ts  hatchet_lt.ts  hatchet_nb.ts  hatchet_nl.ts  hatchet_pl.ts  hatchet_pt_BR.ts  hatchet_pt_PT.ts  hatchet_ro.ts  hatchet_ru.ts  hatchet_sq.ts  (+10 more)
src/: meson.build
src/accounts/: meson.build
src/accounts/google/: GoogleWrapper.cpp  GoogleWrapper.h
src/accounts/xmpp/: XmppAccount.cpp  XmppAccount.h  XmppConfigWidget.cpp  XmppConfigWidget.h  XmppInfoPlugin.cpp  XmppInfoPlugin.h  meson.build
src/accounts/zeroconf/: HatchetZeroconf.h  Zeroconf.cpp  Zeroconf.h  ZeroconfAccount.cpp  ZeroconfAccount.h
src/crashreporter/: CrashReporterConfig.h.in  main.cpp  resources.qrc
src/hatchet/: AclRegistryImpl.cpp  AclRegistryImpl.h  AudioControls.cpp  AudioControls.h  CMakeLists.linux.cmake  CMakeLists.osx.cmake  CMakeLists.win32.cmake  Config.h.in  HatchetApp.cpp  HatchetApp.h  HatchetTrayIcon.cpp  HatchetTrayIcon.h  HatchetVersion.h.in  HatchetWindow.cpp  HatchetWindow.h  HatchetWindow.ui  ResolverConfigDelegate.cpp  ResolverConfigDelegate.h  Scrobbler.cpp  Scrobbler.h  ShortcutHandler.cpp  ShortcutHandler.h  TomahawkApp.cpp  TomahawkApp.h  UbuntuUnityHack.cpp  main.cpp  meson.build
src/hatchet/dialogs/: DiagnosticsDialog.cpp  DiagnosticsDialog.h  LoadPlaylistDialog.cpp  LoadPlaylistDialog.h  LoadPlaylistDialog.ui  SettingsDialog.cpp  SettingsDialog.h  Settings_Downloads.ui  meson.build
src/hatchet/linux/: GnomeShortcutHandler.cpp  GnomeShortcutHandler.h  UPowerHandler.cpp  UPowerHandler.h  meson.build
src/hatchet/mac/: HatchetApp_Mac.h  HatchetApp_Mac.mm  MacDelegate.h  MacShortcutHandler.cpp  MacShortcutHandler.h
src/hatchet/sourcetree/: SourceDelegate.cpp  SourceDelegate.h  SourceTreeView.cpp  SourceTreeView.h  SourcesModel.cpp  SourcesModel.h  SourcesProxyModel.cpp  SourcesProxyModel.h  meson.build
src/hatchet/widgets/: AccountListView.cpp  AccountListView.h  AccountListWidget.cpp  AccountListWidget.h  AccountModelFactoryProxy.cpp  AccountModelFactoryProxy.h  AccountWidget.cpp  AccountWidget.h  AccountsPopupWidget.cpp  AccountsPopupWidget.h  AccountsToolButton.cpp  AccountsToolButton.h  ContainedMenuButton.cpp  ContainedMenuButton.h  SlideSwitchButton.cpp  SlideSwitchButton.h  SocialWidget.cpp  SocialWidget.h  SplashWidget.cpp  SplashWidget.h  meson.build
src/hatchet/xmppbot/: XmppBot.cpp  XmppBot.h
src/infoplugins/: InfoPluginDllMacro.h
src/libhatchet/: ActionCollection.cpp  ActionCollection.h  Album.cpp  Album.h  AlbumPlaylistInterface.cpp  AlbumPlaylistInterface.h  Album_p.h  Artist.cpp  Artist.h  ArtistPlaylistInterface.cpp  ArtistPlaylistInterface.h  AtticaManager.cpp  AtticaManager.h  ContextMenu.cpp  ContextMenu.h  CountryUtils.cpp  CountryUtils.h  DllMacro.h  DownloadJob.cpp  DownloadJob.h  DownloadManager.cpp  DownloadManager.h  DropJob.cpp  DropJob.h  EchonestCatalogSynchronizer.cpp  EchonestCatalogSynchronizer.h  FuncTimeout.cpp  FuncTimeout.h  GlobalActionManager.cpp  GlobalActionManager.h  HatchetConfig.cmake  HatchetSettings.cpp  HatchetSettings.h  HeadlessCheck.h  LatchManager.cpp  LatchManager.h  MetaPlaylistInterface.cpp  MetaPlaylistInterface.h  Pipeline.cpp  Pipeline.h  (+43 more)
src/libhatchet-playdarapi/: Api_v1.cpp  Api_v1.h  Api_v1_5.cpp  Api_v1_5.h  PlaydarAPIDllMacro.h  PlaydarApi.cpp  PlaydarApi.h  PlaydarApi_p.h  StatResponseHandler.cpp  StatResponseHandler.h  meson.build
src/libhatchet-widgets/: PlaylistDelegate.cpp  PlaylistDelegate.h  PlaylistWidget.cpp  PlaylistWidget.h  WidgetsDllMacro.h  meson.build
src/libhatchet/accounts/: Account.cpp  Account.h  AccountConfigWidget.cpp  AccountConfigWidget.h  AccountDelegate.cpp  AccountDelegate.h  AccountDllMacro.h  AccountFactoryWrapper.cpp  AccountFactoryWrapper.h  AccountFactoryWrapperDelegate.cpp  AccountFactoryWrapperDelegate.h  AccountManager.cpp  AccountManager.h  AccountModel.cpp  AccountModel.h  AccountModelFilterProxy.cpp  AccountModelFilterProxy.h  AccountModelNode.h  ConfigStorage.cpp  ConfigStorage.h  ConfigStorageDllMacro.h  CredentialsManager.cpp  CredentialsManager.h  (+7 more)
src/libtomahawk/: DropJob.cpp  meson.build
src/libtomahawk-widgets/: meson.build
src/tests/: TestDatabase.h  TestQuery.h  TestResult.h  TestServent.h  hatchet_add_test.cmake  main.cpp.in  meson.build
src/tomahawk/: Config.h.in  TomahawkApp.cpp  meson.build
src/viewpages/: ViewPageDllMacro.h  meson.build
(+906 files in other folders)
